# gadd

./: .flake8  .pylintrc  Pipfile  README.md  pyproject.toml  whitelist.py
gadd/: __init__.py  conf.py  gadd.py
test/: test_conf.py  test_gadd.py
