[tool.poetry]
name = "gadd"
version = "0.1.0"
description = "README.md"
authors = ["Almaz Kunpeissov <hello@akun.dev>"]
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
    